@@ -1,3 +1,7 @@
+2014-02-13  Dominik Vogt  <vogt@linux.vnet.ibm.com>
+
+	* gcc.target/s390/hotpatch-compile-8.c: New test.
+
 2014-02-13  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gcc.dg/pr59605.c: Convert to a compile test.  Protect MAX_COPY
